--- a/ServicesAndClients/Styles.axaml
+++ b/ServicesAndClients/Styles.axaml
@@ -182,6 +182,15 @@
 		<Setter Property="BorderThickness" Value="2"></Setter>
 	</Style>
 
+	<Style Selector="ComboBox.ChoiceClient">
+		<Setter Property="Margin" Value="0 10 0 0"></Setter>
+		<Setter Property="Width" Value="250"></Setter>
+		<Setter Property="Height" Value="35"></Setter>
+		<Setter Property="BorderBrush" Value="#04a0ff"></Setter>
+		<Setter Property="BorderThickness" Value="2"></Setter>
+		<Setter Property="HorizontalAlignment" Value="Center"></Setter>
+	</Style>
+
 	<Style Selector="ScrollViewer.Scroll">
 		<Setter Property="Height" Value="600"></Setter>
 	</Style>
