начала делать ближайшие записи

--- a/ServicesAndClients/Views/MainPage.axaml
+++ b/ServicesAndClients/Views/MainPage.axaml
@@ -12,10 +12,13 @@
 		<conv:ImageConvert x:Key="ImageConvert"></conv:ImageConvert>
 	</UserControl.Resources>
 
-	<Grid RowDefinitions="12*,65*,7*">
-	<StackPanel Grid.Row="0">
-		<TextBlock Classes="head" Text="Главная страница"></TextBlock>
-		<StackPanel Classes="Filter">
+	<Grid RowDefinitions="14*,65*,7*">
+		<StackPanel Grid.Row="0">
+			<StackPanel Classes="Filter">
+				<Image Height="25" Source="/Assets/school_logo.ico"></Image>
+				<TextBlock Classes="head" Text="Главная страница"></TextBlock>
+			</StackPanel>
+			<StackPanel Classes="Filter">
 			<TextBox Classes="Search" Watermark="Поиск" Text="{Binding Search}"></TextBox>
 			<ComboBox SelectedIndex="{Binding SelectedSort}" Classes="ChoiceSort">
 				<ComboBoxItem>Без сортировки</ComboBoxItem>
@@ -33,6 +36,7 @@
 			<Button IsVisible="{Binding IsVisitableEditDelBut}" Command="{Binding ToPageAddServ}" Classes="AddServ" Content="Добавить услугу"></Button>
 			<TextBox Classes="KodAdmin" Watermark="Введите код администратора" Text="{Binding KodAdmin}" IsVisible="{Binding IsVisitableAdmin}"></TextBox>
 			<Button Classes="ServBT" Content="Подтвердить" Command="{Binding GetKodAdmin}" IsVisible="{Binding IsVisitableAdmin}"></Button>
+				<Button Classes="ServBT" Margin="0 0 10 0" Content="Ближайшие записи" Command="{Binding ToPageUpcomingEntries}" IsVisible="{Binding IsVisitableEditDelBut}"></Button>
 			<Button Classes="ServBT" Content="Вернуться в клиентский режим" Command="{Binding ClienеMode}" IsVisible="{Binding IsVisitableEditDelBut}"></Button>
 		</StackPanel>
 		<TextBlock Classes="headServ" Text="Список услуг"></TextBlock>
